modifiqué los nav-bar con bootstrap

--- a/pages/comunidad_wolf.html
+++ b/pages/comunidad_wolf.html
@@ -9,6 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,600;1,600&display=swap');
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>WOLF INSIDE</title>
 </head>
@@ -22,15 +23,16 @@
             <!--puse esto como H1 porque es lo que quiero que pese más para las búsquedas que el nombre del club-->
         </div>
         <div>
-            <nav>
-                <ul class="nav">
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="./nosotros.html">NOSOTROS</a></li>
-                    <li><a href="./modalidades_de_trabajo.html">MODALIDADES DE TRABAJO</a></li>
-                    <li><a href="./evaluacion_y_contacto.html">EVALUACION Y CONTACTO</a></li>
-                    <li><a href="./comunidad_wolf.html">COMUNIDAD WOLF</a></li>
-                </ul>
+            <nav class="nav nav-pills flex-column flex-sm-row" style="background-color: rgb(193, 231, 193);">
+                <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./nosotros.html">Nosotros</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./modalidades_de_trabajo.html">Modalidades
+                    de Trabajo</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./evaluacion_y_contacto.html">Evaluación y
+                    Contacto</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./comunidad_wolf.html">Comunidad WOLF!</a>
             </nav>
+        </div>
         </div>
     </header>
     <main>
@@ -62,10 +64,13 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.6198846802563!2d-56.130233884679356!3d-34.8908902802563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81242ed1eaa3%3A0x6d0bded4f224ab76!2sHumberto%20I%2C%2011400%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1sen!2suy!4v1638719365191!5m2!1sen!2suy"
                     width="250" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
             <div>
-                <p>Podes venir a conocer el Club y a nuestros <a href="./nosotros.html">Entrenadores</a> cuando quieras. También podes aprovechar a ver a nuestros Wolfies en acción!</p>
-                <p>Es un entorno seguro y controlado para que nuestros animales puedan sentirse tranquilos al momento de trabajar, jugar y simplemente DISFRUTAR de la experiencia.</p>
+                <p>Podes venir a conocer el Club y a nuestros <a href="./nosotros.html">Entrenadores</a> cuando quieras.
+                    También podes aprovechar a ver a nuestros Wolfies en acción!</p>
+                <p>Es un entorno seguro y controlado para que nuestros animales puedan sentirse tranquilos al momento de
+                    trabajar, jugar y simplemente DISFRUTAR de la experiencia.</p>
                 <p>Nos podes encontrar en nuestro espacio ubicado en Humberto Primero 4026</p>
-                <p>¡Dale! Animate a venir con tu perro y disfrutar de todo lo que tiene para ofrecer el Club y nuestro entorno.</p>
+                <p>¡Dale! Animate a venir con tu perro y disfrutar de todo lo que tiene para ofrecer el Club y nuestro
+                    entorno.</p>
             </div>
         </section>
 
@@ -75,6 +80,9 @@
         <p>WOLF INSIDE &reg; Centro de Entrenamiento y Adaptación Canina</p>
         <hr>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 
 </html>
