--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,6 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,600;1,600&display=swap');
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>WOLF INSIDE</title>
 </head>
@@ -22,14 +23,14 @@
             <!--puse esto como H1 porque es lo que quiero que pese más para las búsquedas que el nombre del club-->
         </div>
         <div>
-            <nav>
-                <ul class="nav">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./modalidades_de_trabajo.html">Modalidades de Trabajo</a></li>
-                    <li><a href="./evaluacion_y_contacto.html">Evaluación y Contacto</a></li>
-                    <li><a href="./comunidad_wolf.html">Comunidad Wolf!</a></li>
-                </ul>
+            <nav class="nav nav-pills flex-column flex-sm-row" style="background-color: rgb(193, 231, 193);">
+                <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./nosotros.html">Nosotros</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./modalidades_de_trabajo.html">Modalidades
+                    de Trabajo</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./evaluacion_y_contacto.html">Evaluación y
+                    Contacto</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="./comunidad_wolf.html">Comunidad WOLF!</a>
             </nav>
         </div>
     </header>
@@ -97,6 +98,8 @@
         <p>WOLF INSIDE &reg; Centro de Entrenamiento y Adaptación Canina</p>
         <hr>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 
 </html>
