--- a/pages/evaluacion_y_contacto.html
+++ b/pages/evaluacion_y_contacto.html
@@ -9,7 +9,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,600;1,600&display=swap');
     </style>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>WOLF INSIDE</title>
 </head>
@@ -24,7 +25,8 @@
         </div>
         <div>
             <nav class="nav nav-pills flex-column flex-sm-row" style="background-color: rgb(193, 231, 193);">
-                <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page"
+                    href="../index.html">Inicio</a>
                 <a class="flex-sm-fill text-sm-center nav-link" href="./nosotros.html">Nosotros</a>
                 <a class="flex-sm-fill text-sm-center nav-link" href="./modalidades_de_trabajo.html">Modalidades
                     de Trabajo</a>
@@ -39,58 +41,88 @@
             <div>
                 <p>PONETE EN CONTACTO CON NOSOTROS</p>
             </div>
-            <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur quo aspernatur ad dolore veniam. Omnis dolorem temporibus eaque earum ipsum repudiandae. Numquam sed veritatis, quo amet ipsa ut eveniet doloremque!</div><br>
+            <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur quo aspernatur ad dolore veniam.
+                Omnis dolorem temporibus eaque earum ipsum repudiandae. Numquam sed veritatis, quo amet ipsa ut eveniet
+                doloremque!</div><br>
         </section>
         <section>
-            <div>
-            <fieldset>
-                <legend>Completa el siguiente formulario y nos pondremos en contacto contigo dentro de las siguientes 48hs</legend><br>
-                <form action="">
-                    <div>
-                        <input type="text" placeholder="Tu Nombre"><br><br> <!--los br los voy a sacar cuando implemente CSS y box modeling pero por ahora quedan así para una mejor visual-->
-                        <input type="text" placeholder="El Nombre de tu Perro"><br><br>
-                        <input type="text" placeholder="Edad de tu Perro"><br><br>
-                        <input type="radio" name="sexo" value="macho"><label for="sexo">Macho</label>
-                        <input type="radio" name="sexo" value="hembra"><label for="sexo">Hembra</label><br><br>
-                        <label for="raza">Perro Tipo:</label><br>
-                        <select name="raza" id="">
-                            <option value=""></option>
-                            <option value="raza">Raza</option>
-                            <option value="cruza">Cruza</option>
-                            <option value="no sabe">No tengo ni idea</option>
-                        </select><br><br>
-                        <input type="tel" placeholder="Celular para contactarte"><br><br>
-                        <input type="email" placeholder="Email"><br><br>
-                        <label for="modTrabajo">Modalidad de Trabajo</label><br>
-                        <select name="mt" id="">
-                            <option value=""></option>
-                            <option value="cachorro">Aprende con tu cachorro</option>
-                            <option value="EyMD">Entrenamiento y Modificación de conducta</option>
-                            <option value="aHogar">Adaptación al Hogar</option>
-                        </select>
-                    </div>
-                    <div>
-                        <p>Contanos un poco sobre tu perro, de dónde viene, hace cuánto que está contigo, qué problemas
-                            te
-                            está
-                            dando, en qué tienen ganas de trabajar juntos, y todo dato que creas nos puede ayudar a
-                            conocer
-                            un
-                            poquito más a tu amigo de cuatro de patas 1.500 caracteres</p>
-                        <textarea name="textoLibre" cols="80" rows="10" maxlength="1500" style="resize: none;"></textarea>
-                        <input type="submit" value="Enviar">
-                    </div>
-                </form>
-            </fieldset>
-        </div>
+            <form class="row g-3 m-5">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label"></label>
+                    <input type="text" class="form-control" id="inputEmail4" placeholder="Tu Nombre">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label"></label>
+                    <input type="text" class="form-control" id="inputPassword4" placeholder="El Nombre de tu Perro">
+                </div>
+                <div class="col-md-3">
+                    <label for="inputPassword4" class="form-label"></label>
+                    <input type="text" class="form-control" id="inputPassword4" placeholder="Edad de tu Perro">
+                </div>
+
+                <div class="form-check col-md-3">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1"
+                        checked>
+                    <label class="form-check-label" for="gridRadios1">
+                        Macho
+                    </label>
+                </div>
+                <div class="form-check col-md-3">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                    <label class="form-check-label" for="gridRadios2">
+                        Hembra
+                    </label>
+                </div>
+                <div class="col-md-4">
+                    <label for="razaPerro" class="form-label"></label>
+                    <select id="razaPerro" class="form-select" aria-placeholder="Raza de tu Perro">
+                        <option selected>Raza</option>
+                        <option>Cruza</option>
+                        <option>No tengo ni idea</option>
+                    </select>
+                </div>
+                <div class="col-md-6">
+                    <label for="celular" class="form-label"></label>
+                    <input type="text" class="form-control" id="inputEmail4" placeholder="Celular para Contactarte">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputEmail" class="form-label"></label>
+                    <input type="text" class="form-control" id="inputEmail4" placeholder="Email">
+                </div>
+                <div class="col-md-4">
+                    <label for="razaPerro" class="form-label">Quiero trabajar en...</label>
+                    <select id="razaPerro" class="form-select">
+
+                        <option selected>Aprender con mi Cachorro</option>
+                        <option>Entrenar a mi Perro</option>
+                        <option>Modificar alguna conducta que no me gusta</option>
+                        <option>Adaptarlo a mi Hogar</option>
+                        <option>No estoy seguro, creo que quiero varias cosas</option>
+                    </select>
+                </div>
+                <div>
+                    <p>Contanos un poco sobre tu perro, de dónde viene, hace cuánto que está contigo, qué problemas
+                        te
+                        está
+                        dando, en qué tienen ganas de trabajar juntos, y todo dato que creas nos puede ayudar a
+                        conocer
+                        un
+                        poquito más a tu amigo de cuatro de patas 1.500 caracteres</p>
+                    <textarea name="textoLibre" cols="80" rows="10" maxlength="1500" style="resize: none;"></textarea>
+                    <input type="submit" value="Enviar">
+                </div>
         </section>
     </main>
     <footer>
         <p>WOLF INSIDE &reg; Centro de Entrenamiento y Adaptación Canina</p>
         <hr>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
